--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -1,7 +1,7 @@
 {
   "about.buildnumber": "Build Number:",
   "about.cloudEdition": "Cloud",
-  "about.copyright": "Copyright 2015 - {currentYear} Mattermost, Inc. All rights reserved",
+  "about.copyright": "Copyright 2015 - {currentYear} K25KM Connect, Inc. All rights reserved",
   "about.database": "Database:",
   "about.date": "Build Date:",
   "about.dbversion": "Database Schema Version:",
@@ -4743,8 +4743,8 @@
   "login.cardtitle": "Log in",
   "login.cardtitle.external": "Log in with one of the following:",
   "login.changed": " Sign-in method changed successfully",
-  "login.contact_admin.detail": "To access your team's workspace, contact your workspace admin. If you've been invited already, check your email inbox for a Mattermost workspace invite.",
-  "login.contact_admin.title": "Contact your workspace admin",
+  "login.contact_admin.detail": "To access your team's workspace, contact your section admin. If you've been invited already, check your email inbox for a Mattermost workspace invite.",
+  "login.contact_admin.title": "Contact your section admin",
   "login.createTeam": "Create a team",
   "login.email": "Email",
   "login.forgot": "Forgot your password?",
@@ -4781,7 +4781,7 @@
   "login.session_expired.title": "* Session Expired - {siteName}",
   "login.subtitle": "Collaborate with your team in real-time",
   "login.terms_rejected": "You must agree to the terms of use before accessing {siteName}. Please contact your System Administrator for more details.",
-  "login.title": "Welcome to K25KM Connect",
+  "login.title": "Welcome to Konnect",
   "login.username": "Username",
   "login.userNotFound": "We couldn't find an account matching your login credentials.",
   "login.verified": " Email Verified",
