--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -5728,7 +5728,7 @@
   "signup_user_completed.return": "Return to log in",
   "signup_user_completed.saving": "Creating account…",
   "signup_user_completed.signIn": "Log in",
-  "signup_user_completed.subtitle": "Create your Mattermost account to start collaborating with your team",
+  "signup_user_completed.subtitle": "Create your Konnect account to start chatting with your friends",
   "signup_user_completed.title": "Let’s get started",
   "signup_user_completed.userHelp": "You can use lowercase letters, numbers, periods, dashes, and underscores.",
   "signup_user_completed.usernameLength": "Usernames have to begin with a lowercase letter and be {min}-{max} characters long. You can use lowercase letters, numbers, periods, dashes, and underscores.",
